--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install ruff
 
       - name: Run ruff check
-        run: ruff check --no-fix .
+        run: ruff check .
 
       - name: Run ruff format check
         run: ruff format --check .
